Fix mobile landscape layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@ body::before {
     }
 }
 
-@media (max-width: 850px) {
+@media (max-height: 450px) {
     body {
         overflow: scroll;
         font-size: 50%;
